--- a/Css/media.css
+++ b/Css/media.css
@@ -13,3 +13,42 @@
     width: 1170px;
   }
 }
+/* ------------------header ----------------------------------- */
+
+@media (min-width: 768px) {
+  header nav .toggle-menu {
+    display: none;
+  }
+}
+@media (max-width: 767px) {
+  header nav ul {
+    display: none;
+  }
+  header nav .toggle-menu:hover + ul {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+  }
+  header nav ul li a {
+    padding: 15px !important ;
+  }
+}
+/* Landing------------------------------------ */
+@media (max-width: 768px) {
+  .landing {
+    background-position: center;
+  }
+  .landing .text .content h2 {
+    font-size: 28px;
+  }
+  .landing .text {
+    width: 100%;
+  }
+  .change-background {
+    display: none;
+  }
+}
