--- a/Css/media.css
+++ b/Css/media.css
@@ -52,3 +52,25 @@
     display: none;
   }
 }
+/* --services ------------------------------------ */
+@media (min-width: 768px) {
+  .services .srv-content {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(450px, 1fr));
+    grid-column-gap: 40px;
+    grid-row-gap: 55px;
+  }
+}
+@media (max-width: 767px) {
+  .services .srv-content .srv-box {
+    /* width: 100%; */
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 40px;
+  }
+  .services .srv-content .srv-box i {
+    margin: 0 0 30px;
+  }
+}
