--- a/Css/media.css
+++ b/Css/media.css
@@ -74,3 +74,23 @@
     margin: 0 0 30px;
   }
 }
+/* ----------------------- */
+@media (max-width: 768px) {
+  .design .image-design {
+    display: none;
+  }
+  .design .text {
+    width: 100%;
+  }
+}
+/* --------------------------- */
+@media (min-width: 768px) {
+  .images .box {
+    flex-basis: 50%;
+  }
+}
+@media (min-width: 1200px) {
+  .images .box {
+    flex-basis: 25%;
+  }
+}
